                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.3


  *) [TS-1926] Require Lua v5.1, by checking for lua_getfenv(). This is
   necessary since we are incompatible with Lua v5.2 (for now).

  *) [TS-1921] Fix reclaimable freelist getting stuck in infinite loop.
    Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1824] TSHttpTxnPushedRespHdrBytesGet() takes an int argument in the
   implementation, whereas the prototype does not have this.

  *) [TS-1928] False warning when setting log rotation size to exactly 10.

  *) [TS-1812] Remove obsolete syslog_thr_init calls.

  *) [TS-1825] TSPortDescriptorAccept does not use it's argument.

  *) [TS-1925] Remove obsolete MMH hash API.

  *) [TS-1924] Add metalink plugin documentation.
    Author: Jack Bates <jack@nottheoilrig.com>

  *) [TS-1913] Fix memory issue caused by resolve_logfield_string()
    Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1915]  header_rewrite uses TSUrlHostSet() when using set-destination
   PATH. Author: Nick Berry.

  *) [TS-1941] Configured socket buffer sizes are not applied.

  *) [TS-1912] SSL hangs after origin handshake.

  *) [TS-1911] Enforce MIOBufferAccessor accessor API.

  *) [TS-1909] Remove duplicate listen socket conditioning.

  *) [TS-1896] Cleanup of unused defines, sometimes duplicated.

  *) [TS-374] Reduce lock contention in HostDB.

  *) [TS-1728] Assign storage entries to volumes
     Author: Justin Laue <justin@fp-x.com>

  *) [TS-1899] strtod() does not honor Hex strings on Solaris.

  *) [TS-1894] madvise() not found on Solaris. And some cleanup.

  *) [TS-1765] Make jtest build more like the rest of the code.

  *) [TS-1892] Move msync APIs to ink_memory.h.

  *) [TS-1890] Authproxy plugin caching and reliability fixes.

  *) [TS-1868] TSREMAP_*_STOP does not stop remap plugin evaluation chain.

  *) [TS-1889] Refactor remap plugin request URL handling.
